# z-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev  pyproject.toml
.claude/skills/zspace-coder/: SKILL.md
.claude/skills/zspace-coder/evals/: evals.json
.github/workflows/: ci.yml  release.yml
docs/: Python3.14-pth-hidden-issue.md  download-feature.md
src/zspace/: __init__.py  __main__.py  auth.py  cli.py  client.py  mcp_server.py
src/zspace/api/: __init__.py  fields.py  file.py  ping.py  pool.py  user.py
src/zspace/commands/: __init__.py  base.py  copy.py  create.py  download.py  list.py  list_cmd.py  mcp.py  mcp_cmd.py  mkdir.py  move.py  ping.py  pool.py  poolname.py  read.py  recent.py  remove.py  rename.py  request_cmd.py  search.py  skills.py  teamlist.py
src/zspace/mcp/: __init__.py  base.py
src/zspace/mcp/tools/: __init__.py  copy.py  create.py  list.py  mkdir.py  move.py  ping.py  pool.py  poolname.py  read.py  recent.py  remove.py  rename.py  request.py  search.py  teamlist.py
src/zspace/skills/zspace-cli/: SKILL.md
src/zspace/skills/zspace-mcp/: SKILL.md
tests/: test_api.py  test_auth.py  test_commands.py  test_mcp.py
