[project]
name = "zspace"
version = "0.1.0"
description = "ZSpace CLI & MCP Server - HTTP request tool"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.scripts]
zcli = "zspace.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
